[project]
name = "hf-bot"
version = "0.2.0"
description = "A simple suite of CLI tools for Hugging Face"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "huggingface_hub>=0.20.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "openai",
    "anthropic"
]

[project.scripts]
hf-bot = "main:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "agent"]
